--- a/history.html
+++ b/history.html
@@ -9,12 +9,18 @@
 <body>
     <header>
         <a href="./home.html">Home</a>
+        <a href="./history.html">History</a>
+        <a href="./currenttrads.html">Traditions</a>
     </header>
     <main>
-        <p>The tradition of carving Jack-o’-Lanterns originated in Ireland using turnips instead of pumpkins. It is allegedly based on a legend about a man named Stingy Jack who repeatedly trapped the Devil and only let him go on the condition that Jack would never go to Hell. But when Jack died, he learned that Heaven did not want his soul either, so he was forced to wander the Earth as a ghost for eternity. The Devil gave Jack a burning lump of coal in a carved-out turnip to light his way. Locals eventually began carving scary faces into their own turnips to frighten away evil spirits.</p>
-        <p>The festival of Samhain marked the transition to the new year at the end of the harvest and beginning of the winter. Celtic people believed that during the festival, spirits walked the Earth. Later on, Christian missionaries introduced All Souls’ Day on November 2, which perpetuated the idea of the living coming into contact with the dead around the same time of year.</p>
-        <p>The traditional Halloween colors of black and orange also traces back to the Celtic festival of Samhain. For the Celts, black represented the “death” of summer while the orange symbolized the autumn harvest season. </p>
+        <p> <img src="https://images.unsplash.com/photo-1508361001413-7a9dca21d08a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="carved pumpkins">The tradition of carving Jack-o’-Lanterns originated in Ireland using turnips instead of pumpkins. It is allegedly based on a legend about a man named Stingy Jack who repeatedly trapped the Devil and only let him go on the condition that Jack would never go to Hell. But when Jack died, he learned that Heaven did not want his soul either, so he was forced to wander the Earth as a ghost for eternity. The Devil gave Jack a burning lump of coal in a carved-out turnip to light his way. Locals eventually began carving scary faces into their own turnips to frighten away evil spirits.</p>
+        <p>The festival of Samhain marked the transition to the new year at the end of the harvest and beginning of the winter. Celtic people believed that during the festival, spirits walked the Earth. Later on, Christian missionaries introduced All Souls’ Day on November 2, which perpetuated the idea of the living coming into contact with the dead around the same time of year. <img src="https://images.unsplash.com/photo-1620562303747-ba21ca6f1530?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="day of dead skeleton"></p>
+        <p>The traditional Halloween colors of black and orange also traces back to the Celtic festival of Samhain. <img src="https://images.unsplash.com/photo-1472496175377-b5d7625d4ba9?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="black cat and orange background"> For the Celts, black represented the “death” of summer while the orange symbolized the autumn harvest season. </p>
     </main>
-    <footer></footer>
+    <footer>
+        <p class="p2">
+            Sources: Available upon request (Unsplash free images)
+        </p>
+    </footer>
 </body>
 </html>
