--- a/home.html
+++ b/home.html
@@ -6,16 +6,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body>  
     <header>
+        <a href="./home.html">Home</a>
         <a href="./history.html">History</a>
+        <a href="./currenttrads.html">Traditions</a>
     </header>
     <main>
         <h1>Halloween Historical Website</h1>
         <p>This website is dedicated to the history of Halloween that has led to it being the notorious holiday we now know and love.</p>
+        <div class="flex">
+        <img class="home-img" src="https://images.unsplash.com/photo-1574357335250-23c67eebac62?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="halloween pumpkin"> 
+    </div>
     </main>
     <footer>
-        <p>Sources available upon request.</p>
+        <p class="p2">
+            Author: Landon Oudemans (Written and uploaded: 10-31-2023)
+        </p>
     </footer>
 </body>
 </html>
